# yew-site

./: .gitignore  Cargo.toml  LICENSE  Makefile.toml  README.md  Trunk.toml  build.sh  index.html  index.scss  netlify.toml  rust-toolchain.toml
css/: index.scss
css/data/: keyframes.scss  variables.scss
css/sites/: about_me.scss  blogs.scss  gallery.scss  projects.scss
css/templates/: footer.scss  navbar.scss
hutao/: README.md  find_jpgs.sh  jpeg_compression.sh
hutao/json/: artist_credits.json  folder_sizes.json  image_details.json
py-utils/: README.md  generate_sauce_nao_json.py  requirements.txt  sort_json.py
src/: lib.rs  main.rs
src/data/: footer.rs  gallery.rs  mod.rs
src/enums/: mod.rs
src/routes/: mod.rs
src/sites/: about_me.rs  details.rs  gallery.rs  homepage.rs  mod.rs  utils.rs
src/sites/blog/: blog_nav.rs  blog_test.rs  contents.rs  data.rs  mod.rs  understanding_big_o_notation.rs  utils.rs
src/sites/projects/: contents.rs  descriptions.rs  mod.rs  projects_nav.rs  serenity_discord_bot.rs  utils.rs
src/structs/: mod.rs
src/switch/: mod.rs  router.rs
src/templates/: footer.rs  mod.rs  nav.rs
src/utils/: mod.rs
utils/: Makefile.toml  README.md
utils/x0_general_util_structure/: Cargo.toml  Makefile.toml
utils/x1_file_and_json_utils/: Cargo.toml
utils/x1_file_and_json_utils/src/: init.rs  lib.rs  main.rs  test.rs
utils/x1_file_and_json_utils/src/data/: mod.rs
utils/x1_file_and_json_utils/src/error/: mod.rs
utils/x1_file_and_json_utils/src/utils/: mod.rs
