[package]
name = "yew-site"
version = "0.1.0"
edition = "2021"
readme = "README.md"
keywords = ["yew", "trunk"]
categories = ["gui", "wasm", "web-programming"]

# For wasm-pack if wanted
# [lib]
# crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
yew = { version = "0.21", features = ["csr"] }
yew-router = "0.18"
wasm-bindgen = "0.2.92"
web-sys = { version = "0.3.69", features = [
  "FileSystem",
  "FileSystemDirectoryEntry",
  "HtmlCollection",
  "Element",
] }
yew-hooks = "0.3.1"
lazy_static = "1.4.0"
gloo-storage = "0.3.0"
gloo-net = "0.5.0"

serde = "1.0.197"
serde_json = "1.0.115"

wasm-bindgen-futures = "0.4.42"
