[package]
name = "x1-necessary-checks"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
# clap = "4.5.4"
anyhow = "1.0.82"
thiserror = "1.0.58"

lazy_static = "1.4.0"

serde = { version = "1.0.197", features = ["derive"] }
serde_json = { version = "1.0.116" }
regex = "1.10.4"
